Adds users, authentiaction and reviews functionalities and updates swagger
