# routers/auth.router.js
@@ -6,5 +6,9 @@ const { protect } = require('../middleware/auth');
 router.post('/register', authController.register);
 router.post('/login', authController.login);
 router.get('/me', protect, authController.getMe);
+router.post('/forgotpassword', authController.forgotPassword);
+router.put('/resetpassword/:resettoken', authController.resetpassword);
+router.put('/updatedetails', protect, authController.updateDetails);
+router.put('/updatepassword', protect, authController.updatePassword);
 
 module.exports = router;
