# routers/bootcamps.router.js
@@ -1,15 +1,18 @@
 const express = require('express');
 const router = express.Router();
 const bootcampsController = require('../controllers/bootcamps.controller');
-const advancedResults = require('../middleware/advancedResults');
 const Bootcamp = require('../models/Bootcamp.model');
+
+const advancedResults = require('../middleware/advancedResults');
 const { protect, authorize } = require('../middleware/auth');
 
 // Include other resource routers
 const coursesRouter = require('./courses.router');
+const reviewRouter = require('./review.router');
 
 // Re-route into other resource routers
 router.use('/:bootcampId/courses', coursesRouter);
+router.use('/:bootcampId/reviews', reviewRouter);
 
 router.get(
   '/',
