# routers/user.router.js
@@ -1,0 +1,18 @@
+const express = require('express');
+const router = express.Router();
+const userController = require('../controllers/user.controller');
+const User = require('../models/User.model');
+
+const { protect, authorize } = require('../middleware/auth');
+const advancedResults = require('../middleware/advancedResults');
+
+router.use(protect);
+router.use(authorize('admin'));
+
+router.get('/', advancedResults(User), userController.getUsers);
+router.post('/', userController.createUser);
+router.get('/:id', userController.getUser);
+router.put('/:id', userController.updateUser);
+router.delete('/:id', userController.deleteUser);
+
+module.exports = router;
